add appfork extend

--- a/source/_posts/程序员/实现通用的网站服务构建系统.md
+++ b/source/_posts/程序员/实现通用的网站服务构建系统.md
@@ -6,7 +6,7 @@ description: how to build vpn or vps by youself
 categories: 程序员
 ---
 这篇文章主要记录如何快速创建一个简洁，健壮的web server，目标是实现网站服务的常用模块，尝试全栈思维开发，提供一套快速构建网站服务的全能脚手架，力求突破快速，低廉，优质只能兼得其二的工程瓶颈。
-运用的技术栈：node+express+handlebars+mongDB+mocha
+运用的技术栈：node + express + handlebars + mongDB + mocha
 <!--more-->
 ### 创建服务和基础路由
 
@@ -162,7 +162,7 @@ describe('Unit Tests',()=>{
 //set cookie-parser
 app.use(require('cookie-parser')(credentials.cookieSecret));
 //postbody-parser
-app.use(require('body-parser')());
+app.use(require('body-parser').urlencoded({ extended: false }));
 app.get('/login', (req, res) => {
     if (req.cookies.daguoCookie === 'string123') {
         // res.render('user', { cookie: req.cookies.daguoCookie })
@@ -199,3 +199,44 @@ login页面主要是一个登录表单:
 </form>
 ```
 反复调试可以通过设置cookie的maxAge为一个较短的时间，或者用chrome工具删除cookie，也可以直接通过JS将document.cookie设置为`'{cookiename}=0'`的形式来清除cookie
+
+### 邮件系统
+使用nodemailer模块构建web应用的邮件server非常方便，在lib下新建mailer.js
+```
+const nodemailer = require('nodemailer');
+module.exports = function(credentials) {
+    let mailTransport = nodemailer.createTransport('smtps://' + credentials.gmail.user + '%40gmail.com:' + credentials.gmail.password + '@smtp.gmail.com');
+    let from = 'node-web-server-mailer<shudery@gamil.com>';
+    let masterEmail = '125153450@qq.com'
+    return {
+        send(subject, html, to) {
+            mailTransport.sendMail({
+                to: to ? to : masterEmail,
+                from,
+                subject,
+                html,
+            }, (err, info) => {
+                if (err) {
+                    return console.log('send email error:' + err);
+                };
+                console.log('send email info:' + info.response);
+            });
+        },
+        errorSend(message, filename, exception) {
+            let html = `<h1>site error:</h1>message:${message}<br>`;
+            if (filename) {
+                html += `filename:${filename}<br>`;
+            }
+            if (exception) {
+                html += `exception;${exception}`;
+            }
+            mailTransport.sendMail({
+                from,
+                to: masterEmail,
+                subject: 'site error',
+                html,
+            })
+        },
+    }
+}
+```
