--- a/source/_posts/程序员/实现通用的网站服务构建系统.md
+++ b/source/_posts/程序员/实现通用的网站服务构建系统.md
@@ -23,12 +23,12 @@ app.get('/', (req, res) => {
     res.type('text/plain')
     res.send('welcome home!');
 });
-<!-- 404路由 -->
+<!-- //404路由 -->
 app.use((req, res) => {
     res.status(404);
     res.send('404 not found');
 });
-<!-- 500路由,根据传入参数来区分404路由 -->
+<!-- //500路由,根据传入参数来区分404路由 -->
 app.use((err, req, res, next) => {
     res.status(500);
     res.send('500 server error');
@@ -111,7 +111,7 @@ suite('About Page Test',()=>{
 在app.js文件中添加开启测试的方式，这里用查询参数`?test=1`来开启
 ```
 app.use((req,res,next)=>{
-    //res.locals可以传递给视图模板
+    <!-- //res.locals可以传递给视图模板 -->
     res.locals.startTests = (app.get('env')!== 'production' && req.query.test === 1);
     next();
 });
@@ -122,18 +122,18 @@ app.use((req,res,next)=>{
 <script src='/vendor/mocha.js'></script>
 <script src='/vendor/chai.js'></script>
 {{#if startTests}}
-        <div id="mocha"></div>
-        <script>
-        console.log('startTests')
-        mocha.ui('tdd');
-        var assert = chai.assert;
-        </script>
-        <script src='/test/global.js'></script>
-        {{#if pageTestPath}}
-            <script src='{{pageTestPath}}'></script>
-        {{/if}}
-        <script>mocha.run()</script>
+    <div id="mocha"></div>
+    <script>
+    console.log('startTests')
+    mocha.ui('tdd');
+    var assert = chai.assert;
+    </script>
+    <script src='/test/global.js'></script>
+    {{#if pageTestPath}}
+        <script src='{{pageTestPath}}'></script>
     {{/if}}
+    <script>mocha.run()</script>
+{{/if}}
 ```
 启动服务，访问`localhost:3000/about?test=1`，查看测试结果
 ![](/pic/aboutTest.jpeg)
