--- a/source/_posts/程序员/实现通用的网站服务构建系统.md
+++ b/source/_posts/程序员/实现通用的网站服务构建系统.md
@@ -1,7 +1,7 @@
 ---
 title: 实现通用的网站服务构建系统
 date: 2016-11-23 21:59:48
-tags: [教程,JavaScript]
+tags: [web前端,记录]
 description: how to build vpn or vps by youself
 categories: 程序员
 ---
