--- a/source/_posts/随笔/成为程序员的这一年.md
+++ b/source/_posts/随笔/成为程序员的这一年.md
@@ -12,7 +12,7 @@ music: [http://music.163.com/outchain/player?type=3&id=797973142&auto=1&height=3
 
 **事先预警：**由于本人理工男平时疏于写作，同时语文水平有限，很可能导致本文变成一篇非刻意性软文，其中夹杂着一些鸡汤，也许有毒，不能保证适合所有人。此外这篇总结也许会写着写着烂尾，请上车的朋友随时做好跳车的准备。
 
-##### 正文的分割线
+**正文的分割线，本文未经允许不得转载**
 ***
 我在今年三月底的时候做了一个决定，翘掉学校四门必修课，离开成都去阿里移动事业群工作。过去半年多了，回想当初做着个决定还挺不容易，这个我在大学里做的最离经叛道的一个决定，现在看来，应该也是最正确的。
 
