change thin font to normal

--- a/source/_posts/程序员/实现通用的网站服务构建系统.md
+++ b/source/_posts/程序员/实现通用的网站服务构建系统.md
@@ -136,7 +136,7 @@ app.use((req,res,next)=>{
 {{/if}}
 ```
 启动服务，访问`localhost:3000/about?test=1`，查看测试结果
-![](/pic/aboutTest.jpeg)
+![](/pic/3.jpg)
 
 在test目录下继续添加逻辑功能的单元测试unit.js，区别于页面测试，逻辑测试使用describe/it/expect来描述，结构如下
 ```
@@ -199,6 +199,16 @@ login页面主要是一个登录表单:
 </form>
 ```
 反复调试可以通过设置cookie的maxAge为一个较短的时间，或者用chrome工具删除cookie，也可以直接通过JS将document.cookie设置为`'{cookiename}=0'`的形式来清除cookie
+
+### 开发前端界面
+完成了一些后台逻辑之后我们需要对网站的展示部分进行设计和开发，可以结合网上流行的各种前端展示框架，比如Bootstrap，semanticUI，material-UI，等等进行开发，这些框架给我们提供了网页常用的各种组件，包括导航条，图标，按钮，表单的样式都已经有一套统一的设计，如果希望网站的展示效果区别于普通的网站，那就避免用Boostrap，因为它实在是太流行了，github上10W+的star是其他前端框架的好几倍，不是它不好，只是用久了难免有一些审美疲劳。
+
+我在这套网站构建系统中使用的是semanticUI，它同样提供了丰富的前端组件，其次它的设计风格似乎要更有美感一些，但是它整包的体积太大了，从开发到生产要自行Build出相关样式的文件才划算。此外semanticUI的API风格是短类型名+多类型的组合，粒度更小，自由度比较高，举个栗子就是将btn-info-right的展示效果分割成三个类btn，info和right，这样可能会导致一些命名冲突的问题，但在小型项目中就不予考虑了。
+
+由于页面设计能力有限，所以暂时先临摹一下medium网站的展示效果:
+![](/pic/1.jpg)
+模仿效果，具体可以看github的代码:
+![](/pic/2.jpg)
 
 ### 邮件系统
 使用nodemailer模块构建web应用的邮件server非常方便，在lib下新建mailer.js
