--- a/source/_posts/方法总结/豆瓣电影到对应资源的传送门插件.md
+++ b/source/_posts/方法总结/豆瓣电影到对应资源的传送门插件.md
@@ -5,20 +5,21 @@ tags: [记录,工具]
 description: 一个豆瓣电影到对应资源的传送门插件
 categories: 方法总结
 ---
-这是一个需要自行解压的运行在chrome浏览器上的插件。前几天看了[@羡澈](http://zhangwenli.com/blog/2014/09/01/readfree-chrome-extension/)大神写的豆瓣读书跳转到Readme上下载电子书的地址，所以闲着没事就写了一个电影的跳转。
+这是一个运行在chrome浏览器上的插件。前几天看了[@羡澈](http://zhangwenli.com/blog/2014/09/01/readfree-chrome-extension/)大神写的豆瓣读书跳转到Readme上下载电子书的地址，所以闲着没事就写了一个电影的跳转。
 
 <!--more-->
 ### 项目地址
 [https://github.com/shudery/douban-movies-plugin/](https://github.com/shudery/douban-movies-plugin/)
 
 ### 实现功能
-在豆瓣电影介绍页面自动添加一个下载按钮，点击可以直接传送到该电影的可下载资源的地址，当然了，前提是要找得到资源才行。我写了一个爬虫事先爬取了电影下载网站中有资源，离线为一个哈希表供插件搜索。
+在豆瓣电影介绍页面自动添加一个下载按钮，点击可以直接传送到该电影的可下载资源的地址，当然了，前提是要找得到资源才行。我写了一个爬虫事先爬取了电影下载网站中的现有资源，离线为一个哈希表供插件搜索。
 
 ![](/pic/douban.jpeg)
 
 ### 使用方法
-- 下载Chrome插件：[douban-movies-plugin](https://github.com/shudery/douban-movies-plugin/raw/master/plugin.crx)不需要科学上网，由于我开发者账号没交5刀，所以暂时还没上架到Chrome的官方商店。
-- 打开Chrome浏览器，点击菜单->工具->扩展程序
+- 能够科学上网的同学到chrome应用商店下载即可：[douban-movies-plugin](https://chrome.google.com/webstore/detail/douban-movies-plugin/ecgaddjpeacadegjcopipeoncpaphnpl?hl=zh-CN)
+- 不能的直接本地下载Chrome插件的cxr文件：[plugin.cxr](https://github.com/shudery/douban-movies-plugin/raw/master/plugin.crx)
+- 然后打开Chrome浏览器，点击菜单->工具->扩展程序
 - 将已下载的crx文件拖入Chrome窗口
 - 打开一个豆瓣电影页面（如：[https://movie.douban.com/subject/25934014/](https://movie.douban.com/subject/25934014/)），如果电影标题右侧没有出现下载按钮，则表示该资源暂时没找到。
 
