--- a/source/_posts/随笔/关于我.md
+++ b/source/_posts/随笔/关于我.md
@@ -10,11 +10,12 @@ comments: false
 ***
 
 - 姓名：林秀达
-- 昵称：达哥，阿笑，daguo，shudery
+- 网名：Daguo
+- 昵称：达哥，阿笑
 - 学校：[电子科技大学](http://www.uestc.edu.cn/)本科
 - 专业：电子信息工程
-- 年龄：94年出生
-- 技术方向：热衷互联网技术，前端技术，web软件开发…
+- 生日：1994年3月
+- 技术方向：互联网软件，web全栈，应用架构。
 - 特长爱好：健身，球类运动爱好者，拜仁死忠球迷，段子手脑残粉，剧情类电影，综艺咖，最近在学习做菜
 - 弱点：音痴，柔韧性，平衡能力，抗寒能力，耐力运动…
 - 性格：想走洒脱路线却爱纠结的逗逼boy。
@@ -59,7 +60,7 @@ comments: false
 ## **学习概述**
 ***
 
-- 大三开始在原先计算机原理，软件技术基础，程序语言设计的课程基础上学习前端技术，在极客学院，慕课网有大量前端技术课程的学习，也读过许多前端技术书籍，期间实践的demo皆保存在github上；之后加入学校IT社团学习培训，完成每周任务外参与社团主页的设计和制作；参加百度前端技术学院，平时喜欢逛github，掘金稀土，云栖，segmentfault等社区；
+- 大三开始从EE转CS，主要是自学，在原先计算机原理，软件技术基础，程序语言设计的课程基础上学习前端技术，在极客学院，慕课网有大量前端技术课程的学习，也读过许多前端技术书籍，期间实践的demo皆保存在github上；之后加入学校IT社团学习培训，完成每周任务外参与社团主页的设计和制作；参加百度前端技术学院，平时喜欢逛github，掘金稀土，云栖，segmentfault等社区；
 - 学习前端接近一年的时间里，从一只前端萌新进化为一只可以感受到职业魅力，酷爱互联网技术的砖员。刚开始学习的时候，和许多入门前端的小伙伴一样找各种书籍看，在网上网络课堂学习，跟着老师写代码，这个阶段犯了一系列蠢萌的问题，忘记引个文件什么的，捣鼓着DIV+CSS的布局，强迫症地一点一点的更改属性，那时还很傻不会用调试工具，让页面变得让自己更喜欢，然后就部署到云服务器上告诉亲朋好友看看，能听到一句不错挺厉害就非常开心。
 - 充电几个月之后很幸运在没有什么项目经验的情况下，到阿里实习，在阿里几个月的时间我无论是分析问题，编程思想，团队协作各方面的能力都呈指数增长，接触了很多前端的知识和业务场景，自己的利用业余时间用JS写了一些爬虫，GUI，App等东西，对其他领域有了一些入门；现阶段喜欢用构建化工具做一些前端页面还有做简单的服务端配置，一方面帮助身边有想法的朋友做技术支持，做小创业项目，一方面自己积累经验。
 - 未来以成为能力全面的全栈工程师为目标，为此会努力持续学习软件相关知识，现阶段专注于前端技术实现和工程解决方案。
