--- a/source/_posts/随笔/关于我.md
+++ b/source/_posts/随笔/关于我.md
@@ -6,25 +6,25 @@ categories: 随笔
 cover: /img/7.jpeg
 comments: false
 ---
+
+![](/images/icon-2.jpeg)
+
 ## **基本信息**
 ***
 
 - 姓名：林秀达
 - 网名：Daguo
-- 昵称：达哥，阿笑
 - 学校：[电子科技大学](http://www.uestc.edu.cn/)本科
 - 专业：电子信息工程
-- 生日：1994年3月
+- 年龄：1994年
 - 技术方向：互联网软件，web全栈，应用架构。
 - 特长爱好：健身，球类运动爱好者，拜仁死忠球迷，段子手脑残粉，剧情类电影，综艺咖，最近在学习做菜
 - 弱点：音痴，柔韧性，平衡能力，抗寒能力，耐力运动…
-- 性格：想走洒脱路线却爱纠结的逗逼boy。
 - 目标：能力全面的全栈工程师。为此会持续学习软件相关知识，现阶段专注于前端技术实现和工程解决方案
 - 联系：[shudery@foxmail.com](mailto:shudery@foxmail.com)
-- 其他：[github](https://github.com/shudery)，[微博](http://weibo.com/u/2250284282?refer_flag=1001030101_&is_all=1)，[知乎](https://www.zhihu.com/people/lin-xiu-da)
+- 其他：[github](https://github.com/shudery)，[知乎](https://www.zhihu.com/people/lin-xiu-da)
 <!--more-->
 
-![](/images/about.jpg)
 
 ## **技术能力**
 ***
