--- a/source/_posts/笔记/服务架构基础概念.md
+++ b/source/_posts/笔记/服务架构基础概念.md
@@ -15,7 +15,7 @@ categories: 笔记
 
 通俗来说，通过云资源提供的服务就是 **云服务**，云服务有多种模式，拥有大量云资源的公司往往不止提供云计算的服务，还会提供存储空间，也就是 **云存储**，类似有道云笔记的功能。也可以直接将计算机设施提供给客户后就不管不问了，客户相当于包了台计算机，这种模式就是基础设施服务（IAAS）。目前最流行的是在原先的设施基础层上，拥有云资源的公司会将底层的计算机集群统一分配调度，封装成运营的平台界面和可供开发的 SDK，做成了一套平台服务（PAAS），也就是 **云平台**。
 
-云平台给客户提供运营的功能，按需计费，租户可以随时扩容和缩减资源，同时大公司还会帮你升级，维护服务器，客户只需要专心运营，可以大大节约成本。大公司为了构建云平台，需要规划底层基础设施，开发抽象出方便用户使用功能，在平台化的过程中，大公司把一些底层的脏活累活都给做了，小公司直接利用平台的提供的服务就可以方便的体验到底层设施带来的好处。这就是现在在大公司大行其道的商业模式 **服务化**。业界关于服务化的实践非常多，最厉害的 Amazon Web Services（AWS）已经无需多言，除此之外像 Heroku，Google App Engine（GAE）也具有非常好的口碑，国内以 BATH 为主也都各有实践。
+云平台给客户提供运营的功能，按需计费，租户可以随时扩容和缩减资源，同时大公司还会帮你升级，维护服务器，客户只需要专心运营，可以大大节约成本。大公司为了构建云平台，需要规划底层基础设施，开发抽象出方便用户使用功能，在平台化的过程中，大公司把一些底层的脏活累活都给做了，小公司直接利用平台提供的服务就可以方便的体验到底层设施带来的好处。这就是现在在大公司大行其道的商业模式 **服务化**。业界关于服务化的实践非常多，最厉害的 Amazon Web Services（AWS）已经无需多言，除此之外像 Heroku，Google App Engine（GAE）也具有非常好的口碑，国内以 BATH 为主也都各有实践。
 
 服务化的厉害在于用户根本不需要关注底层框架，不用具备相应的专业知识，但是又不至于像具体的软件服务（SAAS)那样缺少可以自由定制化的功能，无法平衡业务需求和企业利益。而对于个人而言也是好处多多，以前你想做一个网站站长，需要自己买服务器，安装服务器软件，编写网站程序，写监控模块，写日志系统和数据库。现在有了服务化平台，你只需要写你的网站程序，其他的可能就是根据你的心情，随意地在管理桌面添加或删除你想要的功能模块了。
 
@@ -23,9 +23,9 @@ categories: 笔记
 
 随着互联网时代技术的高速发展，大公司开心地利用着自己闲置的计算机资源和思维超前的平台化模式赚着小钱的同时，也在思考着怎么赚大钱。资本的力量让小公司瑟瑟发抖。
 
-第一个方式就是先想办法节约自身成本，买那么多台计算机太浪费钱了，如何才能更加合理的使用资源，提高利用率呢。企业通过将基础设施的 **虚拟化**，在云平台的资源池中，基础设施不一定是真正的物理资源（计算机），往往是抽象后的虚拟资源，让一台计算机变成几十台甚至上百台相互隔离的。虚拟化的好处非常多：可以节省空间，降低能耗，提高计算资源的利用率，稳定性更好，灵活迁移等等。
+第一个方式就是先想办法节约自身成本，买那么多台计算机太浪费钱了，如何才能更加合理的使用资源，提高利用率呢。企业通过将基础设施的 **虚拟化**，在云平台的资源池中，基础设施不一定是真正的物理资源（计算机），往往是抽象后的虚拟资源，让一台计算机变成几十台甚至上百台相互隔离的虚拟机。虚拟化的好处非常多：可以节省空间，降低能耗，提高计算资源的利用率，稳定性更好，灵活迁移等等。
 
-后来 **容器化** 继承了虚拟化的诸多特点，也是一种可选的方案，不过容器化的隔离效果没有虚拟化好，容器的优点是更加轻量，部署更快，符合 DevOps 的理念，Docker 技术也已经非常成熟。配合虚拟机和容器可以有多种虚拟资源的方案。写到这里我突然想起，十年前有一家国产云提供商，那时候云服务还未普及，基础设施服务才刚刚兴起，可以说供应商这时已经有云的意识是非常超前的了。但是随后这家提供商大力的建设虚拟化云机以节约成本，扩大云资源池，而在服务化的道路上停滞不前，之后这家供应商的云平台一直没有很好的发展起来。十年后看无疑服务化才是王道之路，供应商已然醒悟，立志做五年后的五大云之一。这个走了弯路的供应商一直是做管道（通讯设施）的，最近几年终端（手机）也发展得不错，未来能实现"云管端"的战略布局吗？
+后来 **容器化** 继承了虚拟化的诸多特点，也是一种可选的方案，但容器化的隔离效果没有虚拟化好，它的优点是更加轻量，部署更快，符合 DevOps 的理念，Docker 技术也已经非常成熟。配合虚拟机和容器可以有多种虚拟资源的方案。写到这里我突然想起，十年前有一家国产云提供商，那时候云服务还未普及，基础设施服务才刚刚兴起，可以说供应商这时已经有云的意识是非常超前的了。但是随后这家提供商大力的建设虚拟化云机以节约成本，扩大云资源池，而在服务化的道路上停滞不前，之后这家供应商的云平台一直没有很好的发展起来。十年后看无疑服务化才是王道之路，供应商已然醒悟，立志做五年后的五大云之一。这个走了弯路的供应商一直是做管道（通讯设施）的，最近几年终端（手机）也发展得不错，未来能实现"云管端"的战略布局吗？
 
 另外，还要思考自身的平台技术架构的优化问题，传统的企业应用往往采用面向 **服务架构设计（SOA）和企业服务总线（ESB）**的模式，这是一种单一的应用架构，是一种处理小规模应用程序的有效架构设计。但是随着服务平台提供越来越多的功能，程序需要调用越来越多的服务接口，各个服务紧耦合成一团，十分不利于应用的维护，部署。每次修改应用的一个小模块就需要重新部署整个应用，除此之外整个应用使用相同的技术框架，限制了应用的迭代更新和活力。
 
